--- a/proResponse/index.html
+++ b/proResponse/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/fonts/fonts.css" />
     <title>proresponse</title>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=40e8c0efc0ccd36fe604b26b9225904b&libraries=services,clusterer"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
