--- a/proResponse/index.html
+++ b/proResponse/index.html
@@ -10,6 +10,7 @@
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=40e8c0efc0ccd36fe604b26b9225904b&libraries=services,clusterer"
     ></script>
+    <script src="config.js"></script>
   </head>
   <body>
     <div id="root"></div>
