fix: ./config 로 변경

--- a/proResponse/index.html
+++ b/proResponse/index.html
@@ -11,7 +11,7 @@
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=40e8c0efc0ccd36fe604b26b9225904b&libraries=services,clusterer"
     ></script>
     <script src="https://cdn.portone.io/v2/browser-sdk.js"></script>
-    <script src="/config.js"></script>
+    <script src="./config.js"></script>
   </head>
   <body>
     <div id="root"></div>
