fix: proResponse test

--- a/proResponse/index.html
+++ b/proResponse/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="./assets/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/fonts/fonts.css" />
-    <title>proresponse</title>
+    <title>proResponse</title>
     <script
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=40e8c0efc0ccd36fe604b26b9225904b&libraries=services,clusterer"
